Fix mdlparser build and code generation issues
This commit addresses multiple issues with the mdlparser build process and code generation:

1. Fixed build errors by correctly handling symbol conflicts in the Bison-generated
   parser files (mdl.tab.cpp and mdl.tab.h)

2. Updated mdl.l with the proper MdlLexer::skip_proc() implementation to match
   MdlLexer.C, ensuring correct filename tracking during parsing

3. Fixed file output generation by ensuring _fileOutput is properly set in
   Generatable::generateFiles()

4. Corrected Makefile rules for proper generation and handling of parser source files

These changes restore full functionality to the mdlparser, allowing it to both
build successfully and generate output files as expected.

--- a/mdl/Makefile
+++ b/mdl/Makefile
@@ -98,13 +98,16 @@ include sources.mk
 
 # Parser targets
 mdl.tab.h:  parser/mdl.y
-	cd parser; bison -v -d -b mdl mdl.y; cd .. && mv parser/mdl.tab.c parser/mdl.tab.cpp
-	cd parser; mv mdl.tab.h ../include; cd -
+	cd parser && bison -v -d -b mdl mdl.y
+	mv parser/mdl.tab.h include/
+	# Rename .c to .cpp if needed
+	if [ -f parser/mdl.tab.c ]; then mv parser/mdl.tab.c parser/mdl.tab.cpp; fi
 	
 
-parser/mdl.tab.c: parser/mdl.y
-	cd parser; bison -v -d -b mdl mdl.y; cd ..
-	cd parser; bison -v -d -b mdl mdl.y; cd .. && mv parser/mdl.tab.c parser/mdl.tab.cpp
+parser/mdl.tab.cpp: parser/mdl.y
+	cd parser && bison -v -d -b mdl mdl.y
+	# Rename .c to .cpp if needed
+	if [ -f parser/mdl.tab.c ]; then mv parser/mdl.tab.c parser/mdl.tab.cpp; fi
 
 # Scanner targets
 ifeq ($(FLEXFIXER), True)
