--- a/common/Makefile
+++ b/common/Makefile
@@ -1,16 +1,16 @@
-// =============================================================================
-// (C) Copyright IBM Corp. 2005-2025. All rights reserved.
-//
-// Distributed under the terms of the Apache License
-// Version 2.0, January 2004.
-// (See accompanying file LICENSE or copy at http://www.apache.org/licenses/.)
-//
-// =============================================================================
+# =============================================================================
+# (C) Copyright IBM Corp. 2005-2025. All rights reserved.
+#
+# Distributed under the terms of the Apache License
+# Version 2.0, January 2004.
+# (See accompanying file LICENSE or copy at http://www.apache.org/licenses/.)
+#
+# =============================================================================
 OBJDIR= ./obj
 SRCDIR= ./src
 INCDIR= ./include
 CC=g++
-CFLAGS=-I$(INCDIR) -Wall -Werror -lgmp -std=c++11 -Wno-deprecated-declarations # -pedantic
+CFLAGS=-I$(INCDIR) -Wall -Werror -std=c++17 -Wno-deprecated-declarations # -pedantic
 CFLAGS+= -fPIC 
 ifeq ($(USE_SUITESPARSE), 1)
    OTHER_LIBS := -I$(SUITESPARSE)/include -L$(SUITESPARSE)/lib -lcxsparse -DUSE_SUITESPARSE
@@ -36,6 +36,16 @@ else
    UTILS_LIB = $(TARGET_LIB_DIR)/libutils_db.a
 endif
 
+ifeq ($(shell uname), Darwin)
+    # Add Darwin-specific include paths
+   CFLAGS += -I/opt/homebrew/include -I/opt/homebrew/opt/gmp/include
+   LDFLAGS += -L/opt/homebrew/lib -lgmp -stdlib=libc++ -lc++
+   # Add necessary runtime path
+   LDFLAGS += -Wl,-rpath,/opt/homebrew/lib -L/opt/homebrew/opt/open-mpi/lib -lmpi
+else
+   CFLAGS += -lgmp 
+   LDFLAGS += -lgmp 
+endif
 
 .DEFAULT_GOAL := final
 
